# horizon

./: .env.development  .env.example  .env.production  .gitignore  CONTRIBUTING.md  Cargo.toml  QUALITY_STATUS.md  README.md  complete_next.md  newplan.md
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: agent.rs  communication.rs  error.rs  goal.rs  lib.rs  memory.rs  neural_router.rs  scheduler.rs  test_memory_split.rs
crates/agent-core/tests/: neural_router_test.rs
crates/ai-assistant/: Cargo.toml  README.md
crates/ai-assistant/benches/: command_generation.rs  nl_parsing.rs
crates/ai-assistant/src/: command_generator.rs  embeddings.rs  error.rs  learning.rs  lib.rs  parser.rs  query_engine.rs  templates.rs
crates/ai-assistant/tests/: integration_tests.rs
crates/bootstrap/: Cargo.toml  README.md
crates/bootstrap/src/: agents.rs  config.rs  dna.rs  error.rs  genesis.rs  lib.rs  monitoring.rs  population.rs  safeguards.rs  tests.rs
crates/business-interface/: Cargo.toml
crates/business-interface/src/: benchmarks.rs  edge_case_tests.rs  error.rs  explanation.rs  goal.rs  interface.rs  lib.rs  llm_parser.rs  ollama_client.rs  progress.rs  safety.rs
crates/business-interface/tests/: swarm_explorer_test.rs
crates/cluster-mesh/: Cargo.toml  README.md
crates/cluster-mesh/scripts/: install-template.sh
crates/cluster-mesh/src/: classification.rs  classification_tests.rs  discovery.rs  discovery_tests.rs  distribution.rs  distribution_tests.rs  error.rs  error_tests.rs  install_script.rs  lib.rs  mesh.rs  mesh_edge_tests.rs  mesh_tests.rs
crates/cluster-mesh/tests/: integration_tests.rs
crates/consensus/: Cargo.toml  README.md  cobertura.xml
crates/consensus/src/: consensus_compression.rs  edge_case_tests.rs  error.rs  hpc_bridge.rs  leader.rs  lib.rs  million_node_consensus.rs  protocol.rs  protocol_edge_tests.rs  sync.rs  validator.rs  voting.rs
crates/consensus/tests/: adaptive_consensus_test.rs  consensus_compression_test.rs  million_node_consensus_test.rs
crates/cost-optimization/: Cargo.toml
crates/cost-optimization/benches/: cost_optimization_bench.rs
crates/cost-optimization/src/: cloud_pricing.rs  error.rs  gpu_optimizer.rs  lib.rs  resource_tracker.rs  usage_analyzer.rs  workload_scheduler.rs
crates/cost-optimization/tests/: cost_predictor_tdd_tests.rs  integration_test.rs
crates/cpu-agents/: Cargo.toml
crates/cpu-agents/src/: agent.rs  bridge.rs  io_manager.rs  lib.rs  orchestrator.rs
crates/cuda/: Cargo.toml  README.md  build.rs
crates/cuda/src/: additional_tests.rs  context.rs  detection.rs  edge_case_tests.rs  error.rs  kernel.rs  lib.rs  memory.rs  stream.rs
crates/debug/: Cargo.toml
crates/debug/src/: edge_case_tests.rs  lib.rs  replay.rs  replay_engine.rs  replay_manager.rs  replay_types.rs
crates/disaster-recovery/: Cargo.toml
crates/disaster-recovery/benches/: disaster_recovery_bench.rs
crates/disaster-recovery/src/: backup_manager.rs  edge_case_tests.rs  error.rs  failover_coordinator.rs  health_monitor.rs  lib.rs  replication_manager.rs  runbook_executor.rs
crates/disaster-recovery/tests/: integration_tests.rs
crates/documentation-validator/: Cargo.toml
crates/documentation-validator/src/: alignment.rs  audit.rs  lib.rs  main.rs  status_indicators.rs  validation.rs
crates/documentation-validator/test_docs/: performance.md
crates/documentation-validator/tests/: integration_alignment.rs
crates/emergency-controls/: Cargo.toml
crates/emergency-controls/src/: audit_log.rs  behavior_boundaries.rs  edge_tests.rs  error.rs  kill_switch.rs  lib.rs  recovery.rs  resource_limits.rs
crates/evolution/: Cargo.toml
crates/evolution-engines/: Cargo.toml  README.md
crates/evolution-engines/src/: config.rs  error.rs  lib.rs  metrics.rs  population.rs  swarm.rs  swarm_particle.rs  swarm_topology.rs  swarm_velocity.rs  swarm_xp_bridge.rs
crates/evolution-engines/tests/: adas_meta_agent_module_test.rs  adas_module_test.rs  dgm_self_assessment_module_test.rs  distributed_swarm_test_structure.rs  integration_dgm_self_assessment.rs  integration_tests.rs  swarm_fault_tolerance_module_test.rs  swarm_network_module_test.rs  traits_module_test.rs
crates/evolution-global/: Cargo.toml
crates/evolution-global/src/: ai_safety_compliance.rs  consensus_engine.rs  cross_region_sync.rs  error.rs  evolution_coordinator.rs  evolution_monitor.rs  intrusion_detection.rs  lib.rs  secure_multiparty.rs
crates/evolution-global/tests/: ai_safety_compliance_integration.rs  system_integration.rs  (+2 more)
crates/evolution-streaming/: Cargo.toml
crates/fault-tolerance/: Cargo.toml  README.md
crates/global-knowledge-graph/: Cargo.toml
crates/governance/: Cargo.toml
crates/gpu-agents/: .clang-format  .clang-tidy  CMakeLists.txt  Cargo.toml  FIX_ALL_ERRORS.sh  README.md  benchmark_quick.sh  benchmark_runner.sh  build.rs  check_errors.sh  delete_conflicts.sh  demo_monitor.sh  distributed_swarm_integration_test.rs  distributed_swarm_tdd_demonstration.rs  distributed_tdd_demo  e2e_workflow_validation  e2e_workflow_validation.rs  fix_modules_standalone.rs  memory_migration_test  monitor_dashboard.sh  remove_conflicts.sh  run_benchmark_with_monitor.sh  temp_delete.sh  test_consensus.sh  test_monitor.sh  test_monitoring.sh  time_travel_evolution_demo  time_travel_evolution_demo.rs  view_latest_results.sh
crates/gpu-runtime/: Cargo.toml
crates/hpc-cli/: Cargo.toml  README.md
crates/integration-tests/: Cargo.toml
crates/knowledge-graph/: Cargo.toml  README.md
crates/memory/: Cargo.toml  README.md
crates/metal-core/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: argus_bridge.rs  cluster_bridge.rs  costs_bridge.rs  data_pipeline_bridge.rs  edge_proxy_bridge.rs  ephemeral_bridge.rs  error.rs  events.rs  evolution_bridge.rs  gpu_compiler_bridge.rs  hpcci_bridge.rs  intelligence_bridge.rs  kernel_bridge.rs  lib.rs  main.rs  nebula_bridge.rs  rustyspark_bridge.rs  settings_bridge.rs  slai_bridge.rs  state.rs  storage_bridge.rs  stratoswarm_bridge.rs  tensor_mesh_bridge.rs  training_bridge.rs
(+2241 files in other folders)
