[workspace]

[package]
name = "horizon"
version = "0.1.0"
edition = "2021"
authors = ["HPC-AI Team"]
license = "MIT OR Apache-2.0"
description = "Unified HPC-AI Platform - Single pane of glass for the entire stack"
build = "build.rs"

[lib]
name = "horizon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "horizon"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2.0"

[dependencies]
tauri = { version = "2.1", features = [] }
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"  # For system/GPU detection
hex = "0.4"  # For encoding merkle roots
dashmap = "6.1"  # Lock-free concurrent HashMap
rand = "0.8"  # Random number generation for ephemeral tokens

# Internal crate dependencies (commented out temporarily for testing)
# hpc-channels = { path = "../../hpc-channels", features = ["shared-memory", "rkyv-codec"] }
# stratoswarm-cluster-mesh = { path = "../../stratoswarm/crates/cluster-mesh", optional = true }
# rtx-distributed = { path = "../../rustytorch/crates/training/rtx-distributed", optional = true, default-features = false }
# warp-core = { path = "../../warp/crates/warp-core", optional = true }
# warp-format = { path = "../../warp/crates/warp-format", optional = true }
# warp-ipc = { path = "../../warp/crates/warp-ipc", optional = true }
# warp-dashboard = { path = "../../warp/crates/warp-dashboard", optional = true }
# vortex-core = { path = "../../vortex/crates/vortex-core", optional = true }

# GPU-accelerated Rust compilation (10x faster)
# Works on macOS (Metal) and Linux/Windows (CUDA)
# rustg = { path = "../../rustg/rustg", optional = true, default-features = false }

# SLAI - GPU cluster scheduler with multi-vendor support
# Includes 'metal' feature for macOS GPU detection
# slai = { path = "../../slai", optional = true }

[features]
# Default: no embedded features (uses mock implementations)
default = []

# Declare features for conditional compilation (even when dependencies are commented out)
# This silences cfg warnings while maintaining forward compatibility
hpc-channels = []  # Add when dependency is ready: ["dep:hpc-channels"]
embedded-cluster = []  # Add when ready: ["dep:stratoswarm-cluster-mesh"]
embedded-training = []  # Add when ready: ["dep:rtx-distributed"]
embedded-storage = []  # Add when ready: ["dep:warp-core", "dep:warp-format"]
embedded-warp-dashboard = []  # Add when ready: ["dep:warp-ipc", "dep:warp-dashboard"]
gpu-compiler = []  # Add when ready: ["dep:rustg"]
embedded-slai = []  # Add when ready: ["dep:slai"]
embedded-kernel = []  # Add when ready for notebook kernel integration

# Full feature set (enable when dependencies are ready)
# full = ["hpc-channels", "embedded-cluster", "embedded-training", "embedded-storage", "embedded-warp-dashboard", "gpu-compiler", "embedded-slai", "embedded-kernel"]

# Minimal build without embedded crates (uses mocks)
minimal = []

[profile.release]
# Optimize for size while maintaining reasonable performance
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster incremental builds
opt-level = 0
incremental = true
