[package]
name = "exorust-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

# Project crates (removed dependencies with CUDA for testing)
# exorust-cuda = { path = "../cuda" }
# exorust-runtime = { path = "../runtime" }
# exorust-memory = { path = "../memory" }
# exorust-storage = { path = "../storage" }
# exorust-net = { path = "../net" }
# exorust-evolution = { path = "../evolution" }

# Agent-specific dependencies
async-openai = "0.29"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"

# Neural network dependencies (simplified implementation)
# candle-core = { workspace = true }
# candle-nn = { workspace = true }
# ndarray = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.13"

[features]
default = []
mock-llm = []  # Enable mock LLM for testing