[package]
name = "stratoswarm-bootstrap"
version = "0.1.0"
edition = "2021"
authors = ["ExoRust Team"]
description = "Bootstrap mechanism for ExoRust agent ecosystem"
license = "MIT"

[features]
default = []

[dependencies]
# Core ExoRust dependencies
stratoswarm-agent-core = { path = "../agent-core" }
stratoswarm-runtime = { path = "../runtime" }
stratoswarm-memory = { path = "../memory" }
stratoswarm-cuda = { path = "../cuda" }
stratoswarm-synthesis = { path = "../synthesis" }
stratoswarm-evolution-engines = { path = "../evolution-engines" }
stratoswarm-knowledge-graph = { path = "../knowledge-graph" }  # Re-enabled after fixing compilation issues
stratoswarm-monitoring = { path = "../monitoring" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
tokio-test = "0.4"

[[bin]]
name = "genesis-loader"
path = "src/bin/genesis_loader.rs"