[package]
name = "stratoswarm-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true
tracing.workspace = true

# HPC Channels integration
hpc-channels = { workspace = true, optional = true }

# External crates
stratoswarm-cuda = { path = "../cuda" }
stratoswarm-fault-tolerance = { path = "../fault-tolerance" }

# Additional dependencies
bincode = "1.3"
lz4 = "1.28"
dashmap = "6.1"
parking_lot = "0.12"
ring = "0.17"
chrono = { version = "0.4", features = ["serde"] }

# Dependencies for new modules
zstd = "0.13"
rand = "0.8"
rayon = { workspace = true }  # Parallel iteration for vote aggregation

[features]
default = []
hpc-channels = ["dep:hpc-channels"]

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true