[package]
name = "stratoswarm-cost-optimization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cost optimization framework for GPU/cloud resources with predictive analysis"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
ordered-float = "4.3"
statistical = "1.0"
prometheus = "0.13"
rand = "0.8"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"
proptest = "1.6"
test-log = "0.2"
env_logger = "0.11"
mockall = "0.13"
approx = "0.5"
rand = "0.8"

[[bench]]
name = "cost_optimization_bench"
harness = false
