[package]
name = "cpu-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core async runtime - NO GPU dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Compression for I/O
flate2 = "1.0"

# Base64 encoding for message payloads
base64 = "0.21"

# Collections
dashmap = "5.5"

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"
