[package]
name = "stratoswarm-cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
libc = "0.2"
once_cell = "1.20"
which = "7.0"
cc = "1.2"
rand = "0.8"
tempfile = "3.10"
bitflags = "2.4"

[build-dependencies]
cc = "1.2"
which = "7.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["cuda_mock"]
mock = []  # Enable mock implementations for testing without CUDA
cuda_mock = []  # Enable mock CUDA implementations