[package]
name = "stratoswarm-disaster-recovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Disaster recovery and business continuity framework with automated failover"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
bincode = "1.3"
lz4 = "1.28"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.14"
criterion = "0.5"
proptest = "1.6"
test-log = "0.2"
env_logger = "0.11"
mockall = "0.13"
futures = "0.3"
rand = "0.8"

[[bench]]
name = "disaster_recovery_bench"
harness = false
