[package]
name = "stratoswarm-documentation-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doc-validator"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
walkdir = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"