[package]
name = "exorust-emergency-controls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Emergency control system for ExoRust with kill switches, resource limits, and safety mechanisms"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
rand = { workspace = true }

# ExoRust dependencies - minimal for emergency controls
# exorust-agent-core = { path = "../agent-core" }
# exorust-runtime = { path = "../runtime" }
# exorust-monitoring = { path = "../monitoring" }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[features]
default = ["mock"]
mock = []